Allow plugins to add rotate items to browser's context menu. Adds a new WebPluginAction struct, with rotate types. https://bugs.webkit.org/show_bug.cgi?id=75645

Reviewed by Darin Fisher.

* WebKit.gyp:
* public/WebContextMenuData.h:
* public/WebPlugin.h:
(WebKit::WebPlugin::canRotateView):
(WebKit::WebPlugin::rotateView):
* public/WebPluginAction.h: Added.
(WebKit::WebPluginAction::WebPluginAction):
* public/WebView.h:
* src/ContextMenuClientImpl.cpp:
(WebKit::ContextMenuClientImpl::getCustomMenuFromDefaultItems):
* src/WebViewImpl.cpp:
(WebKit::WebViewImpl::performMediaPlayerAction):
(WebKit::WebViewImpl::performPluginAction):
* src/WebViewImpl.h:


Canonical link: https://commits.webkit.org/92811@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@104634 268f45cc-cd09-0410-ab3c-d52691b4dbfc